--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
     "tests"
   ],
   "dependencies": {
-    "polymer": "~1.2.1"
+    "polymer": "Polymer/polymer#~1.2.1"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~1.0.5",
