--- a/bower.json
+++ b/bower.json
@@ -20,9 +20,7 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-    "polymer": "Polymer/polymer#~1.2.1"
-  },
+  "dependencies": {  },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~1.0.5",
     "paper-button": "PolymerElements/paper-button#~1.0.7",
